k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk089-springboot-practice-pipeline
  namespace: skala-practice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sk089-springboot-practice-pipeline
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
        prometheus.io/path: '/actuator/prometheus'
        update: d8c8d2f0
      labels:
        app: sk089-springboot-practice-pipeline
    spec:
      serviceAccountName: default
      containers:
      - name: springboot-practice-pipeline
        image: amdp-registry.skala-ai.com/skala25a/sk089-springboot-practice-pipeline:1.0.0-28888f0a3de0
        imagePullPolicy: Always
